<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/systemsetups_thirdverify"
            android:textColor="#333333"
            android:textSize="18sp" />

        <Button
            android:id="@+id/systemsetups_thirdverify"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/axeac_switch_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/systemsetups_checknewversion"
            android:textColor="#333333"
            android:textSize="18sp" />

        <Button
            android:id="@+id/systemsetups_checknewversion"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/axeac_switch_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/systemsetups_backgroundmsg"
            android:textColor="#333333"
            android:textSize="18sp" />

        <Button
            android:id="@+id/systemsetups_backgroundmsg"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/axeac_switch_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/msg_relativelayout"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/systemsetups_msgtimes"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/systemsetups_msgtimes"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:text="60min"
            android:textSize="18sp"
            android:gravity="center"
            />
    </RelativeLayout>

    <View
        android:id="@+id/line_msg"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/systemsetups_usecert"
            android:textColor="#333333"
            android:textSize="18sp" />

        <Button
            android:id="@+id/systemsetups_usecert"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/axeac_switch_close" />
    </RelativeLayout>

    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

</LinearLayout>