<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop" />
        <!--<ImageView-->
        <!--android:id="@+id/login_btn_setting"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:src="@drawable/setting_icon1" />-->

        <com.axeac.app.sdk.customview.AutoButtonView
            android:id="@+id/login_btn_setting"
            android:layout_width="50dp"
            android:background="@drawable/axeac_round_bg_settingbutton"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/settings_label"
            android:textSize="@dimen/setting_button"
            android:textColor="@color/black"
            />
    </RelativeLayout>


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_input_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_logo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:hint="@string/login_input_username_hint"
        android:singleLine="true"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="18sp" />

    <View
        android:id="@+id/login_input_username_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/login_input_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="#cccccc" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_input_username_line"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:hint="@string/login_input_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="18sp" />

    <View
        android:id="@+id/login_input_password_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/login_input_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/login_select_serverinf_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_input_password_line"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="?clickableItemBackground"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/login_select_serverinf"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/login_input_serverinf_hint"
            android:inputType="none"
            android:textColorHint="#999999"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/login_chooseurl"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/axeac_select_icon_down" />
    </RelativeLayout>

    <View
        android:id="@+id/login_select_serverinf_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/login_select_serverinf_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#cccccc" />


    <!--<android.support.v7.widget.AppCompatCheckBox-->
    <!--android:id="@+id/login_select_savepassword"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/login_select_serverinf_line"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--android:layout_marginRight="25dp"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:button="@drawable/selector_checkbox_login"-->
    <!--android:paddingLeft="10dp"-->
    <!--android:text="@string/login_select_savepassword"-->
    <!--android:textColor="#d0d0d0"-->
    <!--android:textSize="16sp" />-->

    <!--<LinearLayout-->
    <!--android:id="@+id/login_select_savepassword_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="20dp"-->
    <!--android:layout_below="@id/login_select_serverinf_line"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--android:layout_marginRight="25dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:orientation="horizontal">-->

    <!--<ImageView-->
    <!--android:id="@+id/login_select_savepassword"-->
    <!--android:layout_width="20dp"-->
    <!--android:layout_height="20dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:src="@drawable/check_icon_yes" />-->

    <!--<TextView-->
    <!--android:gravity="center_vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="20dp"-->
    <!--android:text="@string/login_select_savepassword"-->
    <!--android:textColor="#d0d0d0"-->
    <!--android:textSize="16sp" />-->
    <!--</LinearLayout>-->

    <com.axeac.app.sdk.customview.AutoButtonView
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login_select_serverinf_line"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/axeac_round_bg"
        android:text="@string/login_btn_login"
        android:textColor="#ffffff"
        android:textSize="20sp" />




</LinearLayout>